--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,5 +1,5 @@
 [build]
-command = "pip install -r requirements.txt"
+builder = "NIXPACKS"
 
 [deploy]
 startCommand = "gunicorn wsgi:application --bind 0.0.0.0:$PORT"
