--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,6 @@ requests==2.31.0
 psycopg2-binary==2.9.7
 reportlab==4.0.4
 gunicorn==21.2.0
-Pillow==10.0.0 
+Pillow==10.0.0
+weasyprint==61.2
+Jinja2==3.1.2 
